Refactoring; formatting
