# data-layer/database/mongo-schemas/mongo-refresh-token.js
@@ -1,10 +1,10 @@
-const mongoose = require('mongoose')
+const mongoose = require("mongoose")
 
 const refreshTokenSchema = new mongoose.Schema({
     token: {
-      type: String,
-      required: true
-    }
-  })
-  
-  module.exports = mongoose.model('RefreshToken', refreshTokenSchema)
+        type: String,
+        required: true,
+    },
+})
+
+module.exports = mongoose.model("RefreshToken", refreshTokenSchema)
